numericalExperiments/log
g++ -c  -Itlapack/include -Itlapack/test/include experiments.cpp -o experiments.o
experiments.cpp: In function ‘int main(int, char**)’:
experiments.cpp:24:9: error: ‘i’ was not declared in this scope
   24 |     for(i = 1; i < argc; ++i){
      |         ^
experiments.cpp:26:13: error: ‘m’ was not declared in this scope; did you mean ‘tm’?
   26 |             m  = atoi( *(argv + i + 1) );
      |             ^
      |             tm
experiments.cpp:32:5: error: a template declaration cannot appear at block scope
   32 |     template<class... Types>
      |     ^~~~~~~~
experiments.cpp:42:19: error: ‘type_array’ does not name a type
   42 |     using types = type_array<float, double>;
      |                   ^~~~~~~~~~
experiments.cpp:44:19: error: ‘types’ does not name a type; did you mean ‘typeof’?
   44 |         using T = types::get<i>;
      |                   ^~~~~
      |                   typeof
experiments.cpp:46:24: error: ‘real_type’ does not name a type; did you mean ‘decltype’?
   46 |         using real_t = real_type<T>
      |                        ^~~~~~~~~
      |                        decltype
make: *** [Makefile:7: experiments.o] Error 1
